add content to second screen / add third screen with content

--- a/index.html
+++ b/index.html
@@ -65,7 +65,6 @@
                 </ul>
             </div>
         </nav>
-        <!-- CENTER -->
 
         <section class="centerInfo">
             <h1 class="centerInfo__title">
@@ -86,7 +85,7 @@
     <div class="secondScreen">
         <section class="about">
             <h2 class="about__title">
-                "Adobe, it is possible..."
+                "Adobe, it's possible..."
             </h2>
             <p class="about__text">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec malesuada hendrerit leo. Cras luctus sit
@@ -99,8 +98,30 @@
         </section>
     </div>
     <div class="thirdScreen">
+        <section class="prdoucts">
 
+        </section>
+        <nav class="prdouctsBar">
+            <ul class="productsBar__list">
+                <li class="productsBar__items">
+                    <img class="productsBar__img" src="img/AdobeIcons/aftereffects.png" alt="">
+                </li>
+                <li class="productsBar__items">
+                    <img class="productsBar__img" src="img/AdobeIcons/aftereffects.png" alt="">
+                </li>
+                <li class="productsBar__items">
+                    <img class="productsBar__img" src="img/AdobeIcons/aftereffects.png" alt="">
+                </li>
+                <li class="productsBar__items">
+                    <img class="productsBar__img" src="img/AdobeIcons/aftereffects.png" alt="">
+                </li>
+                <li class="productsBar__button">
+
+                </li>
+            </ul>
+        </nav>
     </div>
+    <div class="fourthScreen"></div>
     <script src="app.js"></script>
 </body>
 
