fix slider on fourth screen with js

--- a/index.html
+++ b/index.html
@@ -222,11 +222,8 @@
                 <div class="promoSlider">
                     <div class="promoSlider__slides">
                         <!-- HERE -->
-                        <input type="radio" name=radio-btn id="promoSlider__radio1">
-                        <input type="radio" name=radio-btn id="promoSlider__radio2">
-                        <input type="radio" name=radio-btn id="promoSlider__radio3">
 
-                        <div class="promoSlider__slide first">
+                        <div class="promoSlider__slide promoSliderTopSide">
                             <h2 class="promotions__title">
                                 Standard
                             </h2>
@@ -271,20 +268,35 @@
             <div class="promotions__card">
                 <div class="promotions__iconsContainer">
                     <!-- START -->
+                    <div class="promoSlider">
+                        <div class="promoSlider__slides">
 
+                            <div class="promoSlider__slide promoSliderIcons">
+                                1
+                            </div>
+                            <div class="promoSlider__slide">
+                                2
+                            </div>
+                            <div class="promoSlider__slide">
+                                3
+                            </div>
+                        </div>
+
+
+                    </div>
 
                     <!-- END -->
                 </div>
                 <div class="promotions__nav">
-                    <label for="promoSlider__radio1">
-                        <div class="promotions__navButton"></div>
-                    </label>
-                    <label for="promoSlider__radio2">
-                        <div class="promotions__navButton"></div>
-                    </label>
-                    <label for="promoSlider__radio3">
-                        <div class="promotions__navButton"></div>
-                    </label>
+
+                    <div class="promotions__navButton1 promotions__navButton--active"></div>
+
+
+                    <div class="promotions__navButton2"></div>
+
+
+                    <div class="promotions__navButton3"></div>
+
                 </div>
             </div>
         </div>
