end desktop version

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="style/desktopMedia.css">
     <link rel="stylesheet" href="style/firsScreen.css">
     <link rel="stylesheet" href="style/secondScreen.css">
+    <link rel="stylesheet" href="style/thirdScreen.css">
     <link rel="stylesheet" href="style/fourthScreen.css">
     <title>Document</title>
 </head>
@@ -126,9 +127,10 @@
 
                     <div class="slide first">
                         <div class="slide__content">
-                            <div class="slide__titlePhoto">
+                            <div class="slide__containerPhoto">
                                 <h2 class="slide__title">After Effects</h2>
-                                <img class="slide__photo" src="img/AdobeIcons/aftereffects.png" alt="">
+                                <img class="slide__icon" src="img/AdobeIcons/aftereffects.png" alt="">
+                                <img class="slide__photo" src="img/unicorn.jpg" alt="">
                             </div>
                             <h3 class="slide__titleContinue">
                                 Make your photos perfect easly
@@ -141,9 +143,10 @@
                     <div class="slide">
                         <div class="slide__container">
                             <div class="slide__content">
-                                <div class="slide__titlePhoto">
+                                <div class="slide__containerPhoto">
                                     <h2 class="slide__title">illustrator</h2>
-                                    <img class="slide__photo" src="img/AdobeIcons/illustrator.png" alt="">
+                                    <img class="slide__icon" src="img/AdobeIcons/illustrator.png" alt="">
+                                    <img class="slide__photo" src="img/unicorn.jpg" alt="">
                                 </div>
                                 <h3 class="slide__titleContinue">
                                     Make your photos perfect easly
@@ -158,9 +161,10 @@
                     <div class="slide">
                         <div class="slide__container">
                             <div class="slide__content">
-                                <div class="slide__titlePhoto">
+                                <div class="slide__containerPhoto">
                                     <h2 class="slide__title">Light Room</h2>
-                                    <img class="slide__photo" src="img/AdobeIcons/lightroom-cc.png" alt="">
+                                    <img class="slide__icon" src="img/AdobeIcons/lightroom-cc.png" alt="">
+                                    <img class="slide__photo" src="img/unicorn.jpg" alt="">
                                 </div>
                                 <h3 class="slide__titleContinue">
                                     Make your photos perfect easly
@@ -175,9 +179,10 @@
                     <div class="slide">
                         <div class="slide__container">
                             <div class="slide__content">
-                                <div class="slide__titlePhoto">
+                                <div class="slide__containerPhoto">
                                     <h2 class="slide__title">Expreience Design</h2>
-                                    <img class="slide__photo" src="img/AdobeIcons/xd.png" alt="">
+                                    <img class="slide__icon" src="img/AdobeIcons/xd.png" alt="">
+                                    <img class="slide__photo" src="img/unicorn.jpg" alt="">
                                 </div>
                                 <h3 class="slide__titleContinue">
                                     Make your photos perfect easly
@@ -194,33 +199,33 @@
         </section>
 
         <!-- SLIDER BAR -->
-        <nav class="prdouctsBar">
-            <ul class="productsBar__list">
-                <li class="productsBar__items">
-                    <label for="radio1" class="manual-btn">
-                        <img class="productsBar__img" src="img/AdobeIcons/aftereffects.png" alt="">
-                    </label>
-                </li>
-                <li class="productsBar__items">
-                    <label for="radio2" class="manual-btn">
-                        <img class="productsBar__img" src="img/AdobeIcons/illustrator.png" alt="">
-                    </label>
-                </li>
-                <li class="productsBar__items">
-                    <label for="radio3" class="manual-btn">
-                        <img class="productsBar__img" src="img/AdobeIcons/lightroom-cc.png" alt="">
-                    </label>
-                </li>
-                <li class="productsBar__items">
-                    <label for="radio4" class="manual-btn">
-                        <img class="productsBar__img" src="img/AdobeIcons/xd.png" alt="">
-                    </label>
-                </li>
-                <li class="productsBar__button">
-
-                </li>
-            </ul>
-        </nav>
+        <!-- <nav class="prdouctsBar"> -->
+        <ul class="productsBar__list">
+            <li class="productsBar__items">
+                <label for="radio1" class="manual-btn">
+                    <img class="productsBar__icons" src="img/AdobeIcons/aftereffects.png" alt="">
+                </label>
+            </li>
+            <li class="productsBar__items">
+                <label for="radio2" class="manual-btn">
+                    <img class="productsBar__icons" src="img/AdobeIcons/illustrator.png" alt="">
+                </label>
+            </li>
+            <li class="productsBar__items">
+                <label for="radio3" class="manual-btn">
+                    <img class="productsBar__icons" src="img/AdobeIcons/lightroom-cc.png" alt="">
+                </label>
+            </li>
+            <li class="productsBar__items">
+                <label for="radio4" class="manual-btn">
+                    <img class="productsBar__icons" src="img/AdobeIcons/xd.png" alt="">
+                </label>
+            </li>
+            <li class="productsBar__button">
+                <i class="productsBar__icon icon-right-open"></i>
+            </li>
+        </ul>
+        <!-- </nav> -->
     </div>
 
     <!-- FOURTH SCREEN -->
@@ -245,7 +250,7 @@
                             </button>
                         </div>
                         <div class="promoSlider__slide">
-                            <h2 class="promotions__title">
+                            <h2 class="promotions__title promotions__titleProf">
                                 Professional
                             </h2>
                             <p class="promotions__text">
