--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/fontello.css">
-    <link rel="stylesheet" href="style/slider.css">
+    <link rel="stylesheet" href="fontello/fontello.css">
+    <link rel=" stylesheet" href="style/slider.css">
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="style/sidebar.css">
     <link rel="stylesheet" href="style/promoSlider.css">
