add handle to firstScreenButton / add footer

--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="fontello/fontello.css">
+    <link rel="stylesheet" href="style/styles.css">
     <link rel=" stylesheet" href="style/slider.css">
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/footer.css">
+    <!-- <link rel="stylesheet" href="style/style.css"> -->
     <link rel="stylesheet" href="style/sidebar.css">
     <link rel="stylesheet" href="style/promoSlider.css">
     <link rel="stylesheet" href="style/desktopMedia.css">
-    <link rel="stylesheet" href="style/firsScreen.css">
+    <link rel="stylesheet" href="style/firstScreen.css">
     <link rel="stylesheet" href="style/secondScreen.css">
     <link rel="stylesheet" href="style/thirdScreen.css">
     <link rel="stylesheet" href="style/fourthScreen.css">
@@ -91,9 +93,11 @@
                     scelerisque dolor, at mattis quam. Class aptent taciti sociosqu ad litora torquent per conubia
                     nostra
                 </p>
-                <button class="centerInfo__button">
-                    get Staretd
-                </button>
+                <div class="centerInfo__button">
+                    <a href="#about" class="centerInfo__link">
+                        get Staretd
+                    </a>
+                </div>
             </section>
         </div>
     </div>
@@ -339,6 +343,16 @@
             <a href="#products" class="navBtnTopBottom__navBtn navBtn--white">Products</a>
         </div>
     </div>
+    <footer class="footer">
+        <div class="footer__container">
+            <span class="footer__author">
+                <name class="footer__name">Daniel Stępniak</name>
+                <date class="footer__date">27.09.2020</date>
+            </span>
+            <p class="footer__text">This website has been created for learning purposes only, the author bears no
+                financial benefits</p>
+        </div>
+    </footer>
     <script src="app.js"></script>
 </body>
 
